workloads/http-echo/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: http-echo
  labels:
    app: http-echo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app: http-echo
